[package]
name = "RustyPiano"
version = "0.1.0"
authors = ["Kushal Meghani <kushalmeghani108@gmail.com>"]
edition = "2024"
description = "A simple terminal piano in Rust. Plays sa re ga notes with keyboard keys."
license = "GPL-3.0-or-later"
repository = "https://github.com/KushalMeghani1644/RustyPiano"
homepage = "https://github.com/KushalMeghani1644/RustyPiano"

[dependencies]
crossterm = "0.27"
rdev = "0.5.3"
rodio = "0.17"
